--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "hash-password",
-  "version": "1.0.0",
-  "main": "main.ts",
-  "author": "jenis",
-  "license": "MIT",
-  "private": true,
-  "dependencies": {
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.13"
-  }
+    "name": "hash-password",
+    "version": "1.0.0",
+    "main": "main.ts",
+    "scripts": {
+        "dev": "nodemon ./main.ts",
+        "watch": "nodemon  -e ts -w src -x npm run watch:serve",
+        "watch:serve": "tsc && node dist/app.js",
+        "build": "npm run clean && tsc"
+    },
+    "author": "jenis",
+    "license": "MIT",
+    "private": true,
+    "dependencies": {
+        "argon2": "^0.30.2",
+        "colors": "^1.4.0",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "nodemon": "^2.0.20",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.4"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.14",
+        "@types/node": "^18.11.13"
+    }
 }
