--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "private": true,
     "dependencies": {
         "argon2": "^0.30.2",
+        "bcrypt": "^5.1.0",
         "colors": "^1.4.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
@@ -21,6 +22,7 @@
         "typescript": "^4.9.4"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.14",
         "@types/node": "^18.11.13"
