--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "nodemon": "^2.0.20",
+        "object-hash": "^3.0.0",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
     },
     "devDependencies": {
+        "@types/object-hash": "^3.0.1",
         "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.14",
