--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "bcrypt": "^5.1.0",
         "colors": "^1.4.0",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "express": "^4.18.2",
         "nodemon": "^2.0.20",
         "object-hash": "^3.0.0",
@@ -23,10 +24,10 @@
         "typescript": "^4.9.4"
     },
     "devDependencies": {
-        "@types/object-hash": "^3.0.1",
         "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.14",
-        "@types/node": "^18.11.13"
+        "@types/node": "^18.11.13",
+        "@types/object-hash": "^3.0.1"
     }
 }
